--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -21,6 +21,9 @@
               <mat-form-field class="width-90 mat-form-field-padding" style="padding-top: 3px;">
                 <mat-label>*Material Name</mat-label>
                 <textarea matInput formControlName="materialName" class="text-area-border"></textarea>
+                <small *ngIf="addMyMaterial.controls['myMaterial'].controls[i].controls['materialName'].errors?.maxlength" class="warning-color"
+                  >maximun characters allowed is 300</small
+                >
               </mat-form-field>
               <!-- <mat-error *ngIf="myMaterial.controls['email'].hasError('required') && myMaterial.controls['email'].touched">
                   Email is required
