--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -100,7 +100,7 @@
                     <div class="show-rfq-names rfq-icon-material-i" *ngIf="element.ProjectList && (element.ProjectList.length > 2)">
                       <!-- <img src="../../../../assets/images/i_icon.png" /> -->
                       <!-- <mat-icon class="material-info" [matMenuTriggerFor]="projectnames">info</mat-icon> -->
-                      <span class="material-info color-main" [matMenuTriggerFor]="projectnames" >
+                      <span class="material-info color-main cursor-pointer" [matMenuTriggerFor]="projectnames" >
                         More
                       </span>
                       <mat-menu #projectnames="matMenu" class="header-project-menu">
@@ -217,7 +217,7 @@
                     <div class="show-rfq-names rfq-icon-material-i" *ngIf="element.ProjectList && (element.ProjectList.length > 2)">
                       <!-- <img src="../../../../assets/images/i_icon.png" /> -->
                       <!-- <mat-icon class="material-info" [matMenuTriggerFor]="projectnames">info</mat-icon> -->
-                      <span class="material-info color-main font-size12" [matMenuTriggerFor]="projectnames" >
+                      <span class="material-info color-main cursor-pointer font-size12" [matMenuTriggerFor]="projectnames" >
                         More
                       </span>
                       <mat-menu #projectnames="matMenu" class="header-project-menu">
