--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -89,7 +89,7 @@
                       <div class="row width100Percent">
                         <div class="col-xs-8 col-md-8 p-t-10 p-b-10 font-size-vary-grn">
                           {{data.materialName}}  
-                          <div class="font-size10 color-brand">
+                          <div class="font-size-vary-grn color-brand">
                               {{data.materialBrand}} 
                           </div>
                           </div>
