--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -157,6 +157,12 @@ input {
 .text-semi-bold {
   font-weight: 500;
 }
+.text-very-light {
+  font-weight: 300;
+}
+.text-size-light {
+  font-weight: 400;
+}
 
 .font-size14 {
   font-size: 14px;
@@ -686,6 +692,12 @@ mat-accordion {
 }
 .word-break-word {
   word-break: break-word;
+}
+.word-break-all {
+  word-break: break-all;
+}
+.margin-auto{
+  margin: auto;
 }
 
 .button-display-none {
