--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -258,3 +258,24 @@ s .validTill {
   }
 }
 
+
+
+.po-view{
+  .mat-form-field-appearance-legacy .mat-form-field-wrapper{
+    padding-top : 0px !important;
+    font-size: 12px;
+     .mat-form-field-infix{
+       margin-top: -10px;
+   }
+  }
+  .border-bottom-po-view{
+    border-bottom: 1px solid #000000;
+  }
+ .header-card-po {
+    color: #5F5F5F;
+    font-weight: 500;
+    font-size: 16px;
+
+}
+
+}
