--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -977,3 +977,12 @@ h3 {
      color: #716d6d;
      }
  }
+
+   .show-download{
+        a{
+                -webkit-appearance: none !important;
+                i{
+                    color:#f47721;
+                }
+        }
+   }
