Po- Table Responsive Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -292,7 +292,7 @@ a:hover {
 }
 
 .mat-table thead {
-  background-color: $blue-color;
+  background-color: $skyblue-color;
   color: $white-color;
 }
 
