--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -279,3 +279,11 @@ s .validTill {
 }
 
 }
+
+
+.customPo .mat-cell, .customPo .mat-header-cell{
+  min-width: 100px;
+}
+.customPo .po-table .material-row .mat-cell{
+  min-width: 100px;
+}
