Erro fixes Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq-supplier-template/rfq-bid-documents/rfq-bid-documents.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-bid-documents/rfq-bid-documents.component.html
@@ -15,11 +15,14 @@
             <!-- <mat-icon>file_copy</mat-icon> -->
             <img class="file-icon" src="../../../../assets/images/file-doc.png" />
             <span>{{ file.DocumentDesc }}</span>
-            <a type="button" target="_blank" [href]="file.DocumentUrl" mat-icon-button>
-              <i class="material-icons">
-                remove_red_eye
-              </i>
-            </a>
+              <span class="show-download">
+                 <a type="button" target="_blank" [href]="file.DocumentUrl" mat-icon-button>
+                  <i class="material-icons">
+                    remove_red_eye
+                  </i>
+                </a>
+              </span>
+           
           </mat-list-item>
         </span>
         <span *ngIf="!documentData">
