--- a/src/app/features/po/po-documents/po-documents.component.html
+++ b/src/app/features/po/po-documents/po-documents.component.html
@@ -15,11 +15,13 @@
             <!-- <mat-icon>file_copy</mat-icon> -->
             <img class="file-icon" src="../../../../assets/images/file-doc.png" />
             <span>{{ file.DocumentDesc }}</span>
+             <span class="show-download">
             <a type="button" target="_blank" [href]="file.DocumentUrl" mat-icon-button>
               <i class="material-icons">
                 remove_red_eye
               </i>
             </a>
+            </span>
           </mat-list-item>
         </span>
         <span *ngIf="mode != 'edit' && !documentData">
