--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -54,7 +54,7 @@
 
                       <ng-container matColumnDef="Brand Name">
                         <th mat-header-cell *matHeaderCellDef>Brand Name</th>
-                        <td mat-cell *matCellDef="let element">{{ element.materialBrand }}</td>
+                        <td mat-cell *matCellDef="let element" class="brand-name">{{ element.materialBrand }}</td>
                       </ng-container>
 
                       <ng-container matColumnDef="Awarded Quantity">
