--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -1,7 +1,8 @@
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row">
-      <div class="col-sm-12 m-t-5 text-semi-bold text-left" *ngIf="this.mode === 'view'">
+      <div class="col-md-8" *ngIf="this.mode === 'view'"></div>
+      <div class="col-sm-12 col-md-4 m-t-5 text-semi-bold text-left" *ngIf="this.mode === 'view'">
         PO is Approved by {{ this.poData.poStatusChangedBy }} on {{ this.poData.poStatusChangedOn | date: "dd-MMM-yyy" }}
 
         <div *ngIf="this.mode === 'view'" class="float-right">
@@ -11,29 +12,42 @@
         </div>
 
       </div>
-      <div class="col-sm-12 m-t-5 text-right">
-        <div *ngIf="this.mode === 'edit'" class="display-flex justify-content-flex-end">
+
+       <div class="col-md-8 col-lg-9"  *ngIf="this.mode === 'edit'" ></div>
+      <div class="col-sm-12 col-md-4 col-lg-3 m-t-5 text-right"  *ngIf="this.mode === 'edit'" >
+
+        <div class="display-flex justify-content-space-between">
            <div class="p-r-10 p-t-10">
             <span class="text-semi-bold color-main cursor-pointer"
-                      ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15">Download P.O</span></a
+                      ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15" *ngIf="!showResponsiveDesign">Download P.O</span></a
                     ></span>
         </div>
           <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="selectApprover()" [disabled]="!isPoValid">
             Send P.O For Approval
           </button>
         </div>
-        <div *ngIf="this.mode === 'requiredApproval'" class="display-flex justify-content-flex-end">
+
+      </div>
+
+
+      <div class="col-md-7" *ngIf="this.mode === 'requiredApproval'"></div>
+      <div class="col-sm-12 col-md-5 m-t-5 text-right" *ngIf="this.mode === 'requiredApproval'">
+        <div class="display-flex  justify-content-space-between">
             <div class="p-r-10 p-t-10">
             <span class="text-semi-bold color-main cursor-pointer"
-                      ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15">Download P.O</span></a
+                      ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" />
+                      <span class="p-l-5 font-size15" *ngIf="!showResponsiveDesign">Download P.O</span></a
                     ></span>
         </div>
+        <div>
           <button mat-raised-button class="background-color-white main-button main-color m-r-5" (click)="poApproval('rejected')">
             Reject
           </button>
           <button mat-raised-button class="main-background-color main-button color-white " (click)="poApproval('approved')">
             Approve
           </button>
+        </div>
+          
         </div>
       </div>
     </div>
