PO- Responsive Done Button Fixed Address characters Limit DOne Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -84,9 +84,10 @@
                   <small
                     *ngIf="form.controls['addressLine1'].hasError('required') && form.controls['addressLine1'].touched"
                     class="form-error-msg"> Address Line1 is required </small>
-                  <small
-                    *ngIf="form.controls['addressLine1'].hasError('pattern') && form.controls['addressLine1'].touched"
-                    class="form-error-msg"> Enter Valid Address Line1</small>
+                     <small *ngIf="form.controls['addressLine1'].value.length > 120 && form.controls['addressLine1'].touched"
+                    class="form-error-msg">
+                      The text entered exceeds the maximum length
+                      </small>
                 </mat-form-field>
               </div>
 
@@ -101,6 +102,10 @@
                   <small
                     *ngIf="form.controls['addressLine2'].hasError('pattern') && form.controls['addressLine2'].touched"
                     class="form-error-msg"> Enter Valid Address Line 2</small>
+                     <small *ngIf="form.controls['addressLine2'].value.length > 120  && form.controls['addressLine2'].touched"
+                    class="form-error-msg">
+                      The text entered exceeds the maximum length
+                      </small>
                 </mat-form-field>
               </div>
 
