--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -301,3 +301,10 @@ s .validTill {
     margin-right: -15px;
   }
 }
+.froala-design{
+  padding: 0;
+  padding-bottom: 10px;
+}
+.no-terms-window{
+  min-height: 100px;
+}
