--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -1,13 +1,12 @@
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row">
-      <div class="col-md-8" *ngIf="this.mode === 'view'"></div>
-      <div class="col-sm-12 col-md-4 m-t-5 text-semi-bold text-left" *ngIf="this.mode === 'view'">
+      <div class="col-sm-12 col-md-12 m-t-5 text-semi-bold text-left" *ngIf="this.mode === 'view'">
         PO is Approved by {{ this.poData.poStatusChangedBy }} on {{ this.poData.poStatusChangedOn | date: "dd-MMM-yyy" }}
 
         <div *ngIf="this.mode === 'view'" class="float-right">
             <span class="text-semi-bold color-main cursor-pointer"
-                      ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15">Download P.O</span></a
+                      ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15"  *ngIf="!showResponsiveDesign">Download P.O</span></a
                     ></span>
         </div>
 
@@ -30,8 +29,8 @@
       </div>
 
 
-      <div class="col-md-7" *ngIf="this.mode === 'requiredApproval'"></div>
-      <div class="col-sm-12 col-md-5 m-t-5 text-right" *ngIf="this.mode === 'requiredApproval'">
+      <div class="col-md-7 col-lg-8" *ngIf="this.mode === 'requiredApproval'"></div>
+      <div class="col-sm-12 col-md-5 col-lg-4 m-t-5 text-right" *ngIf="this.mode === 'requiredApproval'">
         <div class="display-flex  justify-content-space-between">
             <div class="p-r-10 p-t-10">
             <span class="text-semi-bold color-main cursor-pointer"
@@ -59,15 +58,15 @@
     </div>
 
       <div class="row doc-froala-div">
-        <div class="col-sm-12 col-md-4 p-t-10">
+        <div [ngClass]="showResponsiveDesignDown ? 'col-sm-12 col-md-4 froala-design' : 'col-sm-12 col-md-4 p-b-0'">
           <app-po-documents #poDocument [documentData]="documentList"></app-po-documents>
         </div>
-        <div class="col-sm-12 col-md-8 hidePoweredBy p-t-10" *ngIf="mode === 'edit'">
+        <div [ngClass]="showResponsiveDesignDown ? 'col-sm-12 col-md-8 hidePoweredBy froala-design' : 'col-sm-12 col-md-8 hidePoweredBy p-b-0' " *ngIf="mode === 'edit'">
           <form [formGroup]="poTerms">
             <textarea formControlName="textArea" [innerHTML]="terms && terms.termsDesc" [froalaEditor]="froala" [(froalaModel)]="poTerms['textArea']">Hello, Froala!</textarea>
           </form>
         </div> 
-        <div class="col-sm-12 col-md-8 background-white-color border-radius parent p-t-10" *ngIf="mode === 'view'">
+        <div [ngClass]="showResponsiveDesignDown ? 'col-sm-12 col-md-8 background-white-color border-radius parent no-terms-window' : 'col-sm-12 col-md-8 background-white-color border-radius parent' " *ngIf="mode === 'view' || mode === 'requiredApproval'">
           <div class="word-wrap" *ngIf="mode !== 'edit' && this.terms && terms.termsDesc !== ''" [innerHTML]="terms.termsDesc"></div>
           <div class="center-element" *ngIf="mode !== 'edit' && this.terms && terms.termsDesc == ''">No Term To View</div>
         </div>
