--- a/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
+++ b/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
@@ -30,7 +30,7 @@
             </div>
             <div class="col-xs-2 text-right p-t-5">
               <span class="p-r-10">
-                <a href="javascript:void(0)" class="width-15-px" matTooltip="Delete" (click)="openEditDialog(c, sc)">
+                <a href="javascript:void(0)" class="width-15-px" matTooltip="edit" (click)="openEditDialog(c, sc)">
                   <span class="material-icons main-color">
                     edit
                   </span>
