--- a/src/app/shared/dialogs/edit-my-material/edit-my-material.component.html
+++ b/src/app/shared/dialogs/edit-my-material/edit-my-material.component.html
@@ -15,7 +15,7 @@
   <div class="container">
     <form *ngIf="data" [formGroup]="editMaterialForm" (ngSubmit)="submit()">
       <div class="row my-material-dialog-length">
-        <div formArrayName="forms" *ngFor="let myMaterial of data.materialList; let i = index">
+        <div formArrayName="forms" class="width-100" *ngFor="let myMaterial of data.materialList; let i = index">
           <div class="row p-t-10" [formGroupName]="i">
             <div class="col-xs-3">
               <mat-form-field class="width-90 mat-form-field-padding" style="padding-top: 3px;">
@@ -38,27 +38,50 @@
                 </mat-select>
               </mat-form-field>
             </div>
-            <div class="col-xs-3">
-              <mat-form-field class="border-select width-90 mat-form-field-flex-mm-padding">
-                <mat-label>Trade</mat-label>
-                <mat-select formControlName="trade">
-                  <mat-option *ngFor="let trade of tradesList" [value]="trade">
-                    {{ trade.tradeName }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
+            <div class="col-xs-4 text-center">
+              <span *ngIf="data.type !== 'edit'; else elseTradeBlock">
+                <!-- <mat-form-field class="border-input width-90">
+                  <input type="text" onkeypress="return false;" placeholder="Trade" matInput formControlName="trade" [matAutocomplete]="auto" />
+                  <mat-autocomplete #auto="matAutocomplete" [panelWidth]="'15em'" [displayWith]="displayFn1">
+                    <mat-option matTooltip=" {{ trade.tradeName }}" *ngFor="let trade of this.tradesList" [value]="trade">
+                      {{ trade.tradeName }}
+                    </mat-option>
+                  </mat-autocomplete>
+                </mat-form-field> -->
+                <mat-form-field class="border-select width-90 mat-form-field-flex-mm-padding">
+                  <mat-select formControlName="trade">
+                    <mat-option *ngFor="let trade of tradesList" [value]="trade">
+                      <span>
+                        {{ trade.tradeName }}
+                      </span>
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </span>
+              <ng-template #elseTradeBlock>
+                <span class="p-t-20 display-inline-block">
+                  {{ editMaterialForm.controls["forms"].controls[i].controls["trade"].value.tradeName }}
+                </span>
+              </ng-template>
             </div>
-            <div class="col-xs-3">
-              <mat-form-field class="border-input width-90">
-                <input type="text" placeholder="Category" matInput formControlName="category" [matAutocomplete]="auto" />
-                <mat-autocomplete #auto="matAutocomplete" [panelWidth]="'15em'" [displayWith]="displayFn">
-                  <mat-option matTooltip=" {{ option.categoriesName }}" *ngFor="let option of this.filterOptions | async" [value]="option">
-                    {{ option.categoriesName }}
-                  </mat-option>
-                </mat-autocomplete>
-              </mat-form-field>
+            <div class="col-xs-3 text-center">
+              <span *ngIf="data.type !== 'edit'; else elseBlock">
+                <mat-form-field class="border-input width-90">
+                  <input type="text" placeholder="Category" matInput formControlName="category" [matAutocomplete]="auto" />
+                  <mat-autocomplete #auto="matAutocomplete" [panelWidth]="'15em'" [displayWith]="displayFn">
+                    <mat-option matTooltip=" {{ option.categoriesName }}" *ngFor="let option of this.filterOptions | async" [value]="option">
+                      {{ option.categoriesName }}
+                    </mat-option>
+                  </mat-autocomplete>
+                </mat-form-field>
+              </span>
+              <ng-template #elseBlock>
+                <span class="p-t-20 display-inline-block">
+                  {{ editMaterialForm.controls["forms"].controls[i].controls["category"].value.categoriesName }}
+                </span>
+              </ng-template>
             </div>
-            <div class="col-xs-1 text-center p-t-15">
+            <!-- <div class="col-xs-1 text-center p-t-15">
               <div class="p-t-10">
                 <span *ngIf="i > 1" class="p-r-5">
                   <a class="width-15-px cursor-pointer float-right-invite-delBtn" matTooltip="Delete" (click)="onDelete(i)">
@@ -68,7 +91,7 @@
                   </a>
                 </span>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
