PO awarded to done, Space given in po table Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -400,7 +400,7 @@
 
   <div class="row p-t-10 p-b-10 border-bottom-po-view">
      <div class="col-xs-12 col-sm-12  font-size12 pull-left">
-       <div class="header-card-po border-none">Purchase Order Details</div>
+       <div class="header-card-po border-none">Purchase Order Awarded To:</div>
 
         <div class="width100Percent">
         <span class="text-size-light">
