--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -563,6 +563,10 @@ mat-accordion {
   width: 90%;
 }
 
+.width-95 {
+  width: 95%;
+}
+
 .width-15-px {
   img {
     width: 15px;
@@ -700,7 +704,7 @@ mat-accordion {
 .word-break-all {
   word-break: break-all;
 }
-.margin-auto{
+.margin-auto {
   margin: auto;
 }
 
