--- a/src/app/features/my-material/unapproved-materials-tab/unapprovedMaterialTab.component.html
+++ b/src/app/features/my-material/unapproved-materials-tab/unapprovedMaterialTab.component.html
@@ -16,7 +16,7 @@
           <div class="col-xs-3"></div>
         </mat-expansion-panel-header>
         <div class="background-color-bom-sub-category p-0" *ngFor="let subcategory of category.materialList; let sc = index">
-          <div class="row" *ngIf="!subcategory.isNull">
+          <div class="row p-t-5 p-b-5" *ngIf="!subcategory.isNull">
             <div class="col-xs-3">
               <span class="pull-left p-l-40 p-t-5">{{ subcategory.materialName }}</span>
             </div>
@@ -25,19 +25,22 @@
                 <span class="p-r-5">{{ trades }}<span *ngIf="subcategory.tradeList.length > 1 && i !== subcategory.tradeList.length - 1">,</span> </span>
               </span>
             </div>
-            <div class="col-xs-3 text-left p-t-5">
+            <div class="col-xs-2 text-left p-t-5">
               <span>{{ subcategory.materialUnit }}</span>
             </div>
-            <div class="col-xs-1 text-right p-t-5">
-              <button class="material-icons cursor button-background main-color" matTooltip="edit" (click)="openEditDialog(c, sc)">
-                edit
-              </button>
+            <div class="col-xs-2 text-right p-t-5 p-b-5">
+              <!-- <button class="material-icons cursor button-background main-color" (click)="openEditDialog(c, sc)">
+                +Add to My Materials
+              </button> -->
+              <a href="javascript:void(0)" class="cursor-pointer main-color" (click)="openEditDialog(c, sc)">
+                +Add to My Materials
+              </a>
             </div>
-            <div class="col-xs-1 p-t-5">
+            <!-- <div class="col-xs-1 p-t-5">
               <a href="javascript:void(0)" class="width-15-px cursor-pointer" (click)="onDelete(i)">
                 <img src="../../../../assets/images/delete-button.png/" />
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
       </mat-expansion-panel>
