--- a/src/app/features/bom/bom-myMaterial/bom-myMaterial.component.html
+++ b/src/app/features/bom/bom-myMaterial/bom-myMaterial.component.html
@@ -4,8 +4,8 @@
       <ng-container [formGroupName]="c">
         <mat-accordion>
           <div #myele *ngIf="!isSearching ? true : !category.allNull">
-            <mat-expansion-panel class="m-b-5 m-t-5 bom-qty-page" [expanded]="true">
-              <mat-expansion-panel-header class="background-color-bom-category row">
+            <mat-expansion-panel class="m-b-5 m-t-5 bom-qty-page mat-expansion-panel-header-wrapper" [expanded]="true">
+              <mat-expansion-panel-header class="background-color-skyblue row">
                 <div class="col-xs-6">
                   <mat-panel-title class="pull-left">
                     {{ category.groupName }}
