--- a/src/app/features/my-material/unapproved-materials-tab/unapprovedMaterialTab.component.html
+++ b/src/app/features/my-material/unapproved-materials-tab/unapprovedMaterialTab.component.html
@@ -1,8 +1,8 @@
 <span *ngFor="let category of selectedCategory; let c = index">
   <mat-accordion>
     <div #myele *ngIf="!isSearching ? true : !category.allNull">
-      <mat-expansion-panel class="m-b-5 m-t-5 bom-qty-page" [expanded]="true">
-        <mat-expansion-panel-header class="background-color-bom-category row">
+      <mat-expansion-panel class="m-b-5 m-t-5 bom-qty-page mat-expansion-panel-header-wrapper" [expanded]="true">
+        <mat-expansion-panel-header class="background-color-skyblue row">
           <div class="col-xs-6 text-left">
             <mat-panel-title>
               Category Name
