--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -60,3 +60,10 @@
     padding-bottom: 3px !important;
   }
 }
+
+.mat-expansion-panel-header-wrapper {
+  .mat-expansion-panel-header.mat-expanded:focus,
+  .mat-expansion-panel-header.mat-expanded:hover {
+    background: $skyblue-color !important;
+  }
+}
