--- a/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
+++ b/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
@@ -1,7 +1,7 @@
 <span *ngFor="let category of selectedCategory; let c = index">
   <mat-accordion>
     <div #myele *ngIf="!isSearching ? true : !category.allNull">
-      <mat-expansion-panel class="m-b-5 m-t-5 mat-expansion-panel-header-wrapper bom-qty-page" [expanded]="true">
+      <mat-expansion-panel class="m-b-5 m-t-5 border-radius-panel mat-expansion-panel-header-not-expand mat-expansion-panel-header-wrapper bom-qty-page" [expanded]="true">
         <mat-expansion-panel-header class="background-color-skyblue row">
           <div class="col-xs-6 text-left">
             <mat-panel-title>
@@ -33,11 +33,11 @@
                 edit
               </button>
             </div>
-            <div class="col-xs-1 p-t-5">
+            <!-- <div class="col-xs-1 p-t-5">
               <a href="javascript:void(0)" class="width-15-px cursor-pointer" (click)="onDelete(i)">
                 <img src="../../../../assets/images/delete-button.png/" />
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
       </mat-expansion-panel>
